--- a/setup.cfg
+++ b/setup.cfg
@@ -7,7 +7,7 @@ known_third_party = tqdm,loguru
 known_data_processing = cv2,numpy,scipy,PIL,matplotlib,scikit_image
 known_datasets = pycocotools
 known_deeplearning = torch,torchvision,caffe2,onnx,apex,timm,thop,torch2trt,tensorrt,openvino,onnxruntime
-known_myself = yolox
+known_myself = yolox_audio
 sections = FUTURE,STDLIB,THIRDPARTY,data_processing,datasets,deeplearning,myself,FIRSTPARTY,LOCALFOLDER
 no_lines_before=STDLIB,THIRDPARTY,datasets
 default_section = FIRSTPARTY
